# timesfm-smallcap-forecaster

./: .gitignore  README.md  app.py  cli.py  pyproject.toml  requirements.txt
examples/: grrr_analysis.py
forecaster/: __init__.py  analysis.py  data.py  model.py  report.py  visualize.py
